--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -1,13 +1,33 @@
-<script src="/js/jquery-1.11.2.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
+{% if layout.common-ext-js %}
+  {% for js in layout.common-ext-js %}
+	<script src="{{ js }}"></script>
+  {% endfor %}
+{% endif %}
 
-{% if include.full %}
-  <script src="/js/main.js"></script>
+{% if page.ext-js %}
+  {% for js in page.ext-js %}
+	<script src="{{ js }}"></script>
+  {% endfor %}
 {% endif %}
 
 {% if page.js %}
   {% for js in page.js %}
-	<script src="{{ js }}"></script>
+	<script src="{{ js | prepend: site.baseurl | replace: '//', '/' }}"></script>
+  {% endfor %}
+{% endif %}
+
+{% if layout.common-js %}
+  {% for js in layout.common-js %}
+    <!-- doing something a bit funky here because I want to be careful not to include JQuery twice! -->
+    {% if js contains 'jquery' %}
+      <script>
+      	if (typeof jQuery == 'undefined') {
+      	  document.write('<script src="{{ js | prepend: site.baseurl | replace: "//", "/" }}"></scr' + 'ipt>');
+      	}
+      </script>
+    {% else %}
+	<script src="{{ js | prepend: site.baseurl | replace: '//', '/' }}"></script>
+    {% endif %}
   {% endfor %}
 {% endif %}
 
