--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="container">
+  <div class="container beautiful-jekyll-footer">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <ul class="list-inline text-center footer-links">
@@ -33,6 +33,16 @@
             </a>
           </li>
           {% endif %}
+      {% if site.author.google-plus and site.footer-links-active.google-plus %}
+          <li>
+            <a href="https://plus.google.com/{{ site.author.google-plus }}" title="Google+">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          {% endif %}
 		  {% if site.author.email and site.footer-links-active.email %}
           <li>
             <a href="mailto:{{ site.author.email }}" title="Email me">
@@ -45,7 +55,7 @@
           {% endif %}
 		  {% if site.author.linkedin and site.footer-links-active.linkedin %}
           <li>
-            <a href="https://linkedin.com/{{ site.author.linkedin }}" title="LinkedIn">
+            <a href="https://linkedin.com/in/{{ site.author.linkedin }}" title="LinkedIn">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -53,12 +63,62 @@
             </a>
           </li>
           {% endif %}
+		  {% if site.author.xing and site.footer-links-active.xing %}
+          <li>
+            <a href="https://www.xing.com/profile/{{ site.author.xing }}" title="Xing">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-xing fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          {% endif %}
 		  {% if site.author.stackoverflow and site.footer-links-active.stackoverflow %}
           <li>
-            <a href="https://stackoverflow.com/{{ site.author.stackoverflow }}" title="StackOverflow">
+            <a href="https://stackoverflow.com/users/{{ site.author.stackoverflow }}" title="StackOverflow">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          {% endif %}
+      {% if site.author.snapchat and site.footer-links-active.snapchat %}
+          <li>
+            <a href="https://www.snapchat.com/add/{{ site.author.snapchat }}" title="Snapchat">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-snapchat-ghost fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          {% endif %}
+      {% if site.author.instagram and site.footer-links-active.instagram %}
+          <li>
+            <a href="https://www.instagram.com/{{ site.author.instagram }}" title="Instagram">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          {% endif %}
+      {% if site.author.youtube and site.footer-links-active.youtube %}
+          <li>
+            <a href="https://www.youtube.com/{{ site.author.youtube }}" title="YouTube">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          {% endif %}
+      {% if site.author.spotify and site.footer-links-active.spotify %}
+          <li>
+            <a href="https://open.spotify.com/user/{{ site.author.spotify }}" title="Spotify">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-spotify fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -71,19 +131,23 @@
 				<i class="fa fa-rss fa-stack-1x fa-inverse"></i>
 			  </span>
 			</a>
-		  </li>		
-          {% endif %}		  
+		  </li>
+          {% endif %}
         </ul>
         <p class="copyright text-muted">
-		  &copy; {{ site.title }}
+		  {{ site.author.name }}
 		  &nbsp;&bull;&nbsp;
 		  {{ site.time | date: '%Y' }}
+
+		  {% if site.url-pretty %}
 		  &nbsp;&bull;&nbsp;
-		  <a href="{{ site.url }}">{{ site.url-short }}</a>
+		  <a href="{{ site.url }}">{{ site.url-pretty }}</a>
+		  {% endif %}
 	    </p>
+	        <!-- Please don't remove this, keep my open source work credited :) -->
 		<p class="theme-by text-muted">
 		  Theme by
-		  <a href="https://github.com/daattali/beautiful-jekyll">beautiful-jekyll</a>
+		  <a href="http://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
 		</p>
       </div>
     </div>
