--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  
-  {% include head.html full = true %}
+---
+layout: base
+---
 
-  <body>
-  
-    {% include nav.html %}
+<div class="intro-header"></div>
 
-    <div role="main" class="container main-content">
-      {{ content }}
-    </div>
-
-    {% include footer.html %}
-  
-    {% include footer-scripts.html full = true %}
-  
-  </body>
-</html>
+<div role="main" class="container">
+  {{ content }}
+</div>
