--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,25 +1,18 @@
 ---
-layout: default
+layout: base
 ---
 
-{% if page.title %}
-<header class="header-page">
+{% include header.html type="page" %}
+
+<div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-	  <div class="page-heading">
-	    <h1>{{ page.title }}</h1>
-	    {% if page.description %}
-	    <hr class="small">
-	    <span class="page-subheading">{{ page.description }}</span>
+      {{ content }}
+	    {% if page.comments %}
+        <div class="disqus-comments">
+	        {% include disqus.html %}
+        </div>
 	    {% endif %}
-	  </div>
     </div>
-  </div>
-</header>
-{% endif %}
-
-<div class="row">
-  <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-    {{ content }}
   </div>
 </div>
