:star2: feat: add cookie bar

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -120,5 +120,5 @@
   {% if site.matomo %}
   {% include matomo.html %}
   {% endif %}
-
+  <script type="text/javascript" id="cookiebanner" data-height="42px" data-position="top" src="https://cdnjs.cloudflare.com/ajax/libs/cookie-banner/1.2.2/cookiebanner.min.js"></script>
 </head>
