--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -37,11 +37,11 @@
       </ul>
     </div>
 
-	{% if page.image and (layout.show-avatar or page.show-avatar) %}
+	{% if page.nav-image and (layout.show-avatar or page.show-avatar) %}
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
 	    <a href="{{ site.url }}">
-	      <img class="avatar-img" src="{{ page.image | prepend: site.baseurl | replace: '//', '/' }}" />
+	      <img class="avatar-img" src="{{ page.nav-image | prepend: site.baseurl | replace: '//', '/' }}" />
 		</a>
 	  </div>
 	</div>
