:star2: feat: add comments

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -73,7 +73,7 @@
   {% endif %}
 
 
-  <meta property="og:type" content="website" />
+  <meta property="og:type" content="article" />
 
   {% if page.id %}
   <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
