--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="{{ site.author.name }}" />
 
-  <link rel="shortcut icon" type="image/png" href="favicon.png">
+  <link rel="shortcut icon" type="image/png" href="/favicon.ico">
 
   {% if page.subtitle %}
   <meta name="description" content="{{ page.subtitle }}">
