:star2: feat: add asciidoctor admonition via icons

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
             {%- endif -%}
                 <span class="fa-stack fa-lg" aria-hidden="true">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa {{ element.icon }} fa-stack-1x fa-inverse"></i>
+                  <i class="{{ element.icon }} fa-stack-1x fa-inverse"></i>
                 </span>
                 <span class="sr-only">{{ element.name }}</span>
               </a>
@@ -45,11 +45,11 @@
         {% endif %}
       {% endif%}
       </p>
-          <!-- Please don't remove this, keep my open source work credited :) -->
-    <p class="theme-by text-muted">
-      Theme by
-      <a href="http://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
-    </p>
+      <!-- Please don't remove this, keep my open source work credited :) -->
+      <p class="theme-by text-muted">
+        Theme by
+        <a href="http://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
+      </p>
       </div>
     </div>
   </div>
