:scissors: refactor: switch to cookieconsent

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -119,5 +119,21 @@
   <meta name="twitter:image" content="{{ site.url }}{{ site.avatar }}" />
   {% endif %}
 
-  <script type="text/javascript" id="cookiebanner" data-height="42px" data-position="top" src="https://cdnjs.cloudflare.com/ajax/libs/cookie-banner/1.2.2/cookiebanner.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
+  <script>
+  window.addEventListener("load", function(){
+  window.cookieconsent.initialise({
+    "palette": {
+      "popup": {
+        "background": "#000000",
+        "text": "#eeeeee"
+      },
+      "button": {
+        "background": "#cc0033"
+      }
+    },
+    "position": "top"
+  })});
+  </script>
 </head>
