--- a/static/overwrites.css
+++ b/static/overwrites.css
@@ -11,3 +11,14 @@
 .bilberry-hugo-theme nav.permanentTopNav div.container {
   min-height: 45px;
 }
+figure.listing-block {
+  margin: 15px 20px;
+}
+.bilberry-hugo-theme div.article-wrapper article {
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0,0,0,.2);
+}
+.bilberry-hugo-theme div.article-wrapper.single article {
+	background-color: #fff;
+	box-shadow: none;
+}
